--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,11 +6,11 @@
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
-            {#{{ encore_entry_link_tags('app') }}#}
+            {{ encore_entry_link_tags('app') }}
         {% endblock %}
 
         {% block javascripts %}
-            {#{{ encore_entry_script_tags('app') }}#}
+            {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </head>
     <body>
@@ -33,10 +33,9 @@
                         <a class="nav-link" href="{{  path('addCountry') }}">Add One</a>
                         <a class="nav-link" href="{{ path('countries') }}" >List All</a>
                     </nav>
-
-                    <div class="col-10">
-                        {% block body %}{% endblock %}
-                    </div>
+                </div>
+                <div class="col-10">
+                    {% block body %}{% endblock %}
                 </div>
             </div>
         </div>
